src/tests/testfiles/const/4.txt
testfiles/const/4.c:8:5: error: assignment of read-only variable 'aa'
aa = &a;
^
